# Nova

./: .gitignore  CMakeLists.txt  README.md  test_aether.cpp  test_codegen.cpp  test_nova.cpp
examples/: fibonacci.ae  hello.ae  hello.nova  math.ae  minimal.nova  simple.nova  test.nova  types.ae  types.nova
src/ast/: Node.cpp  Node.h  Types.cpp  Types.h
src/codegen/: CodeGenContext.cpp  CodeGenContext.h  CodegenVisitor.cpp  CodegenVisitor.h
src/driver/: main.cpp
src/grammar/: Aether.g4  Nova.g4
src/parser/: Nova.interp  NovaBaseListener.cpp  NovaBaseListener.h  NovaBaseVisitor.cpp  NovaBaseVisitor.h  NovaLexer.cpp  NovaLexer.h  NovaLexer.interp  NovaListener.cpp  NovaListener.h  NovaParser.cpp  NovaParser.h  NovaVisitor.cpp  NovaVisitor.h
src/sema/: ASTBuilder.cpp  ASTBuilder.h  SymbolTable.cpp  SymbolTable.h  TypeChecker.cpp  TypeChecker.h
src/utils/: Error.cpp  Error.h  SourceLocation.cpp  SourceLocation.h
